pulseai day 3 and 4

--- a/pulseai/templates/layout.html
+++ b/pulseai/templates/layout.html
@@ -31,7 +31,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url "contact" %}">Contact</a>
               </li>
-
+              <li class="nav-item">
+                <a class="nav-link" href="{% url "blogs" %}">Blogs</a>
+              </li>
+              
             </ul>
           </div>
         </div>
@@ -45,5 +48,6 @@
         &copy; 2024 | PulseAI
     </footer>
     <script src="{% static "js/bootstrap.bundle.min.js" %}"></script>
+    {% block javascript %}{% endblock %}
 </body>
 </html>
