--- a/pulseai/templates/layout.html
+++ b/pulseai/templates/layout.html
@@ -34,6 +34,26 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url "blogs" %}">Blogs</a>
               </li>
+              {% if user.is_authenticated %}
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Welcome, {{user.username}}
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Take a test</a></li>
+                  <li><a class="dropdown-item" href="#">Profie</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="{% url "signout" %}">Logout</a></li>
+                </ul>
+              </li>
+              {% else %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url "signup" %}">Sign Up</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url "signin" %}">Sign In</a>
+                </li>
+              {% endif %}
               
             </ul>
           </div>
