--- a/pulseai/templates/patient/take_a_test.html
+++ b/pulseai/templates/patient/take_a_test.html
@@ -32,7 +32,7 @@
                 </div>
                 <p class="text-muted">This is an AI generated response and can be wrong. Please consult with a doctor for accurate diagnosis.</p>
                 <div class=" my-3">
-                    <a href="" class="btn btn-primary">Book an Appointment</a>
+                    <a href="{% url "appointment" %}" class="btn btn-primary">Book an Appointment</a>
                 </div>
             </div>
             {% endif %}
