PulsiAI visit and user profile

--- a/pulseai/static/css/style.css
+++ b/pulseai/static/css/style.css
@@ -16,3 +16,10 @@
 .error{
     color: red;
 }
+
+html[data-theme="light"], :root {
+    /* --primary: #9774d5;
+    --secondary: #785cab;
+    --link-fg: #7c449b;
+    --link-selected-fg: #8f5bb2; */
+  }
