--- a/pulseai/templates/blog/index.html
+++ b/pulseai/templates/blog/index.html
@@ -4,7 +4,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container my-5">
         <div class="row  g-2">
             <div class="col-md-7 hero-text">
                 <h1 class="display-5 fw-semibold mb-1">Welcome to PulseAI: Your Partner in Heart Health</h1>
