--- a/pulseai/templates/layout.html
+++ b/pulseai/templates/layout.html
@@ -45,7 +45,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="{% url "take_a_test" %}">Take a test</a></li>
-                  <li><a class="dropdown-item" href="#">Profie</a></li>
+                  <li><a class="dropdown-item" href="{% url "profile" %}">Profie</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="{% url "signout" %}">Logout</a></li>
                 </ul>
