--- a/pulseai/templates/blog/details.html
+++ b/pulseai/templates/blog/details.html
@@ -13,5 +13,24 @@
             <iframe width="100%" height="400" src="https://www.youtube.com/embed/{{blog.yt_video_id}}"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     {% endif %}
+
+    {% if user.is_authenticated %}
+    <form action="{% url "comment" %}" method="post">
+        {% csrf_token %}
+        <input type="hidden" name="bid" value="{{blog.id}}">
+        <textarea rows="7" name="comment" class="form-control" placeholder="Comment" required></textarea>
+        <input type="submit" value="Post" class="d-inline-block mt-2 btn btn-dark">
+    </form>
+    {% endif %}
+
+    {% for c in comments %}
+    <div class="card my-2 rounded-0">
+        <div class="card-body">
+            <p class="fw-bold mb-0">{{c.user.first_name}} {{c.user.last_name}}</p>
+            <span class="text-sm text-muted">{{c.created_at}}</span>
+            <p>{{c.comment}}</p>
+        </div>
+    </div>
+    {% endfor %}
 </div>
 {% endblock %}
